2004-07-29  Dave Neary  <bolsh@gimp.org>
	* app/core/gimpdrawable-transform.c: Stop signed ints overflowing
	while getting the mean by replacing (a + b) / 2 with a / 2 + b / 2.
	Fixes bug #128594 for drawables less than 32K wide.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14216 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-29  Dave Neary  <bolsh@gimp.org>
+
+	* app/core/gimpdrawable-transform.c: Stop signed ints overflowing 
+	while getting the mean by replacing (a + b) / 2 with a / 2 + b / 2. 
+	Fixes bug #128594 for drawables less than 32K wide.
+
 2004-07-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/preferences-dialog.c: renamed "Cleared saved foobar now"
