2004-07-29  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawable.c: fixed gtk-doc comments.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14217 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawable.c: fixed gtk-doc comments.
+
 2004-07-29  Dave Neary  <bolsh@gimp.org>
 
 	* app/core/gimpdrawable-transform.c: Stop signed ints overflowing 
