* plug-ins/gimpressionist/repaint.c: converted a multiple if into a nested one.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14220 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-29  Shlomi Fish <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/repaint.c: converted a multiple if into
+	a nested one.
+
 2004-07-29  Sven Neumann  <sven@gimp.org>
 
 	* app/core/core-enums.h: removed enums GimpImageType and
