2004-07-29  Sven Neumann  <sven@gimp.org>
	* libgimpbase/gimpbase.def: added new symbols.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14222 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-29  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/gimpbase.def: added new symbols.
+
 2004-07-29  Michael Natterer  <mitch@gimp.org>
 
 	Added support for motion event history as provided by some input
