2004-07-29  Michael Schumacher <schumaml@cvs.gnome.org>
	* libgimp/gimp.def
	* libgimp/gimpui.def: added some missing symbols


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14223 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-29  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimp.def
+	* libgimp/gimpui.def: added some missing symbols
+
 2004-07-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/gimpbase.def: added new symbols.
