--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-29  Shlomi Fish <shlomif@iglu.org.il>
+
+	* plug-ins/gimpressionist/*.[ch]: normalized the names of the fields
+	of gimpressionist_vals_t.
+
 2004-07-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/Makefile.am
