--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-29  DindinX  <david@dindinx.org>
+
+	* plug-ins/FractalExplorer/Dialogs.c: converted all the GtkPreviews to
+	GimpPreviewArea.
+
 2004-07-29  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpmodule/gimpmoduledb.c: converted tabs to spaces, removed
