--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-30  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/bumpmap.c: use GimpPreviewArea instead of
+	GtkPreview (which leads to much simpler code)
+
 2004-07-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimppreviewarea.c: only invalidate the buffer
