2004-07-30  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/bumpmap.c: removed preview code that isn't used
	any longer.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14233 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-30  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/bumpmap.c: removed preview code that isn't used
+	any longer.
+
 2004-07-30  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/bumpmap.c: use GimpPreviewArea instead of
