completed last entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14235 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,8 @@
 	* libgimpwidgets/gimpcolorbutton.c
 	* plug-ins/common/edge.c: removed trailing commas from enums.
 
-	* plug-ins/common/snoise.c
+	* plug-ins/common/snoise.c: renamed defines to avoid collision
+	with system headers.
 
 	* plug-ins/imagemap/imap_cmd_move.c: no C++ style comments.
 
