2004-07-30  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw):
	optimized alpha blending.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14236 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-30  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw):
+	optimized alpha blending.
+
+2004-07-30  Sven Neumann  <sven@gimp.org>
+
 	Applied a bunch of AIX portability fixes (bug #148813):
 
 	* configure.in: when testing for Xmu library, link with -lXt -lX11.
