* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw): corrected a typo causing mayhem in previews of non-alpha grayscale images. Fixes bug #148873. (as reported by DindinX)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14240 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-29  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw): corrected a 
+	typo causing mayhem in previews of non-alpha grayscale images.
+	Fixes bug #148873.
+
 2004-07-30  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/ccanalyze.c (fillPreview): optimized preview
