--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 2004-07-29  Shlomi Fish  <shlomif@iglu.org.il>
 
-	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw): corrected a 
-	typo causing mayhem in previews of non-alpha grayscale images.
-	Fixes bug #148873.
+	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw):
+	corrected a typo causing mayhem in previews of non-alpha grayscale
+	images. Fixes bug #148873.
 
 2004-07-30  Sven Neumann  <sven@gimp.org>
 
