* plug-ins/common/CML_explorer.c: Transformed one GtkPreview to a   GimpPreviewArea and the other to a simple GtkDrawingArea, since this   makes the code simpler.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14243 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-30  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/CML_explorer.c: Transformed one GtkPreview to a
+	GimpPreviewArea and the other to a simple GtkDrawingArea, since this
+	makes the code simpler.
+
 2004-07-30  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* libgimpwidgets/gimppreviewarea.c (gimp_preview_area_draw):
