* plug-ins/common/channel_mixer.c: GtkPreview->GtkDrawingArea, plus   some minor code cleanups.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14244 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-30  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/channel_mixer.c: GtkPreview->GtkDrawingArea, plus
+	some minor code cleanups.
+
+2004-07-30  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/CML_explorer.c: Transformed one GtkPreview to a
 	GimpPreviewArea and the other to a simple GtkDrawingArea, since this
 	makes the code simpler.
