fixed ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14249 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2004-07-30  Sven Neumann  <sven@gimp.org>
 
-	Applied a bunch of small changes contributed by Tim Mooney that fix
+	Applied a bunch of small changes contributed by Tim Mooney to fix
 	stack corruption on Tru64 and Aix (bug #129867).
 
 	* app/Makefile.am
