--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-30  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/curve_bend.c: Use a GimpPreviewArea instead of
+	GtkPreview.
+
 2004-07-30  Sven Neumann  <sven@gimp.org>
 
 	Applied a bunch of small changes contributed by Tim Mooney to fix
