--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-31  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpmenu.c (gimp_menu_make_preview): use a GtkImage and
+	a GdkPixbuf instead of the deprecated GtkPreview widget.
+
 2004-07-30  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/curve_bend.c: Use a GimpPreviewArea instead of
