--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-31  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/depthmerge.c: use a GimpPreviewArea instead of a
+	GtkPreview. Some code cleanup, too.
+
 2004-07-31  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpmenu.c (gimp_menu_make_preview): use a GtkImage and
