2004-07-31  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpcolorselect.c: minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14255 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-31  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpcolorselect.c: minor cleanup.	
+
+2004-07-31  Sven Neumann  <sven@gimp.org>
+
 	* libgimp/gimppatternmenu.c: ported to GimpPreviewArea.
 
 	* libgimp/gimpbrushmenu.c: some small changes for consistency.
