plug-ins/common/gauss.c: Add ability to pop up a dialog if called from pdb with RUN_INTERACTIVE.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14256 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-30  Seth Burgess  <sjburges@gimp.org>
+	
+	* plug-ins/common/gauss.c: added some non-interactive modes (if called 
+	from the pdb with RUN_INTERACTIVE).
+
 2004-07-31  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpcolorselect.c: minor cleanup.	
