--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-31  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/gflare/gflare.c: ported to GimpPreviewArea.
+
 2004-07-31  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/despeckle.c: ported to GimpPreviewArea.
