--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/iwarp.c: ported to GimpPreviewArea.
+
 2004-07-31  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/gqbist.c: ported to GimpPreviewArea.
