* plug-ins/flame/flame.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14269 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  Shlomi Fish  <shlomif@iglu.org.il>
+
+	* plug-ins/flame/flame.c: ported to GimpPreviewArea.
+
 2004-08-01  Simon Budig  <simon@gimp.org>
 
 	* app/core/core-enums.h
