2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
	* libgimpwidgets/gimpwidgets.def: added gimp_preview_area_fill


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14270 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimpwidgets/gimpwidgets.def: added gimp_preview_area_fill
+
 2004-08-01  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/flame/flame.c: ported to GimpPreviewArea.
