2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
	* app/Makefile.am: added checks and rules to build and link the
	win32 icon resource if the resource compiler windres is found by
	configure. First part of a fix for bug #148443.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14271 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
 
+	* app/Makefile.am: added checks and rules to build and link the
+	win32 icon resource if the resource compiler windres is found by
+	configure. First part of a fix for bug #148443.
+
+2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
+
 	* libgimpwidgets/gimpwidgets.def: added gimp_preview_area_fill
 
 2004-08-01  Shlomi Fish  <shlomif@iglu.org.il>
