--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
 
+	* configure.in: move an AM_CONDITIONAL out of an if block
+
+2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
+
 	* configure.in: added checks for windres. Fixes bug #148443
-	together will my last commit.
+	together with my last commit.
 
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
 
