2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
	* configure.in: modified the checks. hopefully it works on all
	platforms this time.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14274 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
 
+	* configure.in: modified the checks. hopefully it works on all
+	platforms this time.
+
+2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
+
 	* configure.in: move an AM_CONDITIONAL out of an if block
 
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
