* plug-ins/common/mapcolor.c * plug-ins/common/sample_colorize.c: ported to GimpPreviewArea.
* plug-ins/common/newsprint.c: ported to GimpPreviewArea, even though
  it should use some pngs instead.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14275 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-01  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/mapcolor.c
+	* plug-ins/common/sample_colorize.c: ported to GimpPreviewArea.
+
+	* plug-ins/common/newsprint.c: ported to GimpPreviewArea, even though
+	it should use some pngs instead.
+
 2004-08-01  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* configure.in: modified the checks. hopefully it works on all
