2004-08-01  Simon Budig  <simon@gimp.org>
	* app/core/gimpbrushgenerated.[ch]: Added optional spikes for
	the generated brushes, enabling star shaped generated brushes.

	* app/widgets/gimpbrusheditor.[ch]: GUI for this.

	* app/core/gimpbrush.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14276 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-01  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpbrushgenerated.[ch]: Added optional spikes for
+	the generated brushes, enabling star shaped generated brushes.
+
+	* app/widgets/gimpbrusheditor.[ch]: GUI for this.
+
+	* app/core/gimpbrush.c: changed accordingly.
+
 2004-08-01  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/mapcolor.c
