2004-08-01  Simon Budig  <simon@gimp.org>
	* app/widgets/gimpbrusheditor.c: Fixed oversight that accidentially
	reset the number of spikes to 2.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14277 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-01  Simon Budig  <simon@gimp.org>
 
+	* app/widgets/gimpbrusheditor.c: Fixed oversight that accidentially
+	reset the number of spikes to 2.
+
+2004-08-01  Simon Budig  <simon@gimp.org>
+
 	* app/core/gimpbrushgenerated.[ch]: Added optional spikes for
 	the generated brushes, enabling star shaped generated brushes.
 
