2004-08-01  Manish Singh  <yosh@gimp.org>
        * configure.in: Really really fix WINDRES logic.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14280 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-01  Manish Singh  <yosh@gimp.org>
 
+	* configure.in: Really really fix WINDRES logic.
+
+2004-08-01  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: Really fix WINDRES logic.
 
 2004-08-01  DindinX  <david@dindinx.org>
