--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-01  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/sinus.c: ported to GimpPreviewArea.
+
 2004-08-01  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: Really really really fix WINDRES logic.
