* plug-ins/common/tileit.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14285 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-01  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/tileit.c: ported to GimpPreviewArea.
+
+2004-08-01  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/sinus.c: ported to GimpPreviewArea.
 
 2004-08-01  Manish Singh  <yosh@gimp.org>
