--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-02  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/unsharp.c: ported to GimpPreviewArea. Centered the
+	preview, too.
+
 2004-08-01  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/tileit.c: ported to GimpPreviewArea.
