--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-02  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-07-26  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added app/actions/plug-in-commands.c.
