* plug-ins/common/whirlpinch.c: ported to GimpPreviewArea.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14290 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-02  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/whirlpinch.c: ported to GimpPreviewArea.
+
+2004-08-02  DindinX  <david@dindinx.org>
+
 	* plug-ins/common/video.c: ported to GimpPreviewArea.
 
 2004-08-02  DindinX  <david@dindinx.org>
